Create hamburger menu

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto:wght@700&family=Inter:wght@400;700&display=swap");
-
 * {
   padding: 0;
   margin: 0;
@@ -39,16 +38,17 @@ header {
   line-height: 24px;
 }
 
-.menu-bars {
-  background: transparent;
-  border: none;
-  outline: none;
+.container {
+  display: inline-block;
+  cursor: pointer;
 }
 
-.menu-bars i {
-  width: 18px;
-  height: 12px;
-  color: white;
+.bar1, .bar2, .bar3 {
+  width: 30px;
+  height: 3px;
+  background-color: rgb(255, 255, 255);
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 main {
@@ -56,8 +56,7 @@ main {
   flex-direction: column;
 }
 
-#intro,
-#about-me {
+#intro, #about-me {
   background-color: #1c1a19;
   color: white;
   position: relative;
@@ -87,8 +86,7 @@ main {
   color: #fff;
 }
 
-.intro-greet,
-#about-me h2 {
+.intro-greet, #about-me h2 {
   color: #ff6b00;
   font-family: "Crete Round", serif;
   font-style: normal;
@@ -135,8 +133,7 @@ main {
   height: 20px;
 }
 
-.about-me-section,
-.stacks {
+.about-me-section, .stacks {
   position: relative;
   padding: 10%;
   padding-bottom: 20vh;
@@ -168,8 +165,7 @@ main {
   border-color: #212121;
 }
 
-.first-card-description,
-.card {
+.first-card-description, .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -192,8 +188,7 @@ main {
   left: 0;
 }
 
-.description,
-.white-description {
+.description, .white-description {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -202,8 +197,7 @@ main {
   color: #fff;
 }
 
-.blue-color,
-.blue-color * {
+.blue-color, .blue-color * {
   color: #091e42 !important;
 }
 
@@ -282,9 +276,7 @@ li {
   background: rgba(0, 0, 0, 0.349);
 }
 
-#about-me,
-.about-me-section,
-.stacks {
+#about-me, .about-me-section, .stacks {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -390,8 +382,7 @@ textarea {
   outline: none;
 }
 
-input,
-textarea {
+input, textarea {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -411,9 +402,7 @@ textarea {
   align-items: center;
   justify-content: space-around;
   padding: 5vh;
-  filter:
-    invert(67%) sepia(46%) saturate(986%) hue-rotate(179deg)
-    brightness(92%) contrast(82%);
+  filter: invert(67%) sepia(46%) saturate(986%) hue-rotate(179deg) brightness(92%) contrast(82%);
 }
 
 @media all and (min-width: 720px) {
@@ -423,36 +412,29 @@ textarea {
     left: 5px;
     bottom: 35%;
   }
-
   .mobile-icon {
     display: none;
   }
-
   .desktop-icon {
     display: block;
     height: 50%;
   }
-
   #intro {
     height: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-
-  .menu-bars {
+  .container {
     display: none;
   }
-
   #desktop-nav {
     display: block;
   }
-
   #desktop-nav ul {
     display: flex;
     margin-right: 10vw;
   }
-
   .nav-link {
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -464,97 +446,72 @@ textarea {
     border: 1px solid transparent;
     transition: 350ms;
   }
-
   .nav-link:hover {
     border: 1px solid #d2d5db;
   }
-
   #logo {
     font-size: 24px;
   }
-
   .first-card {
     display: flex;
   }
-
   .first-card-img {
     width: 40vw;
   }
-
   .cards-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
-
   .card {
     width: auto;
     height: 40vh;
     padding: 2%;
     cursor: pointer;
   }
-
-  .card,
-  .card * {
+  .card, .card * {
     transition: all 350ms;
   }
-
-  .card-link,
-  .card:hover .background-div,
-  .card:hover .card-description {
+  .card-link, .card:hover .background-div, .card:hover .card-description {
     opacity: 0;
   }
-
   .card:hover .card-link {
     opacity: 1;
   }
-
   .stacks {
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-around;
   }
-
   .about-me-section {
     align-items: flex-start;
   }
-
-  .about-me-section > * {
+  .about-me-section>* {
     max-width: 50vw;
     margin: 15px 0;
   }
-
   #contact {
     display: flex;
     padding: 10% 5%;
   }
-
   #contact h2 {
     width: 30vw;
   }
-
   #fullname {
     display: none;
   }
-
-  #email,
-  textarea {
+  #email, textarea {
     min-width: 50vw;
   }
-
   .name-form {
     display: flex;
     min-width: 100%;
   }
-
-  #name,
-  #surname {
+  #name, #surname {
     min-width: 49%;
   }
-
   .footer-social {
     justify-content: center;
   }
-
   .social-icon {
     width: 3vw;
     height: 32px;
